@@ -1,0 +1,54 @@
+/* XPM */
+static char * tX_minimize_panel_xpm[] = {
+"10 10 41 1",
+" 	c None",
+".	c #4343E0",
+"+	c #4545DC",
+"@	c #4646D7",
+"#	c #4747D2",
+"$	c #4948CD",
+"%	c #4A49C8",
+"&	c #4B4AC3",
+"*	c #4D4BBE",
+"=	c #4E4CB9",
+"-	c #504FAF",
+";	c #4847D0",
+">	c #5757F8",
+",	c #5A5AEF",
+"'	c #5C5CE6",
+")	c #5F5FDD",
+"!	c #6161D3",
+"~	c #6464CA",
+"{	c #6767C1",
+"]	c #6969B8",
+"^	c #5351A0",
+"/	c #4C4BC0",
+"(	c #6767BF",
+"_	c #6969B5",
+":	c #6B6BAC",
+"<	c #6C6CA3",
+"[	c #6E6E99",
+"}	c #707090",
+"|	c #717187",
+"1	c #73737E",
+"2	c #565491",
+"3	c #4F4FAF",
+"4	c #5150A9",
+"5	c #5251A3",
+"6	c #53529D",
+"7	c #545397",
+"8	c #555491",
+"9	c #56558B",
+"0	c #575685",
+"a	c #58577F",
+"b	c #595879",
+"          ",
+"          ",
+"          ",
+"          ",
+"          ",
+"          ",
+".+@#$%&*=-",
+";>,')!~{]^",
+"/(_:<[}|12",
+"34567890ab"};
